--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,22 @@
 <div>
     <h1>Productos</h1>
+
+    <div id="saludo">Hola, {{user.name}} estos son los productos disponibles</div><br>
+
+    {{#if user.role}}
+    <div>Iniciaste sesion como {{user.role}}</div>
+
+    <br>
+
+    <button id="logout" onclick="logout()">Cerrar sesion</button>
+    {{else}}
+    <div>Bienvenido,todavia no iniciaste sesion</div> 
     
+    <br>
+    
+    <button id="logout" onclick="logout()">Iniciar sesion</button>
+    {{/if}}
+
     <div>
         {{#each this.products.docs}}
         <div>
@@ -17,7 +33,7 @@
             <br><br><br>
         </div>
         {{/each}}
-        
+
     </div>
 
 </div>
