--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -3,5 +3,5 @@
     <p>{{user.name}}</p>
     <p>{{user.email}}</p>
     <p>{{user.age}}</p>
-    <a href="/api/sessions/logout"><button>Salir</button></a>
+    <a href="/login"><button>Salir</button></a>
 </div>
