--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,5 +9,9 @@
         <input type="submit">
     </form>
     <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
+
+<div><a href="/api/sessions/github"><button>Entrar con GitHub</button></a></div>
+
 </div>
+
 <script src="/js/login.js"></script>
