modificando el proyecto para realizar validaciones en la capa del controlador unicamente

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -18,7 +18,7 @@
     {{/if}}
 
     <div>
-        {{#each this.products.docs}}
+        {{#each this.products}}
         <div>
             <p>{{this.title}}</p>
             <p>{{this.description}}</p>
