cambios tercera pre entrega

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,10 +1,10 @@
 <div>
     <h1>Productos</h1>
 
-    <div id="saludo">Hola, {{user.name}} estos son los productos disponibles</div><br>
+    <div id="saludo">Hola, {{user.nombre}} estos son los productos disponibles</div><br>
 
-    {{#if user.role}}
-    <div>Iniciaste sesion como {{user.role}}</div>
+    {{#if user.rol}}
+    <div>Iniciaste sesion como {{user.rol}}</div>
 
     <br>
 
