cambios de la tercera practica integradora

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,7 +9,7 @@
         <input type="submit">
     </form>
     <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
-
+    <p>¿Olvidaste tu contraseña? <a href="/requestResetPassword">Restáurala aquí</a></p>
 <div><a href="/api/sessions/github"><button>Entrar con GitHub</button></a></div>
 
 </div>
