--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,42 +1,14 @@
 <div>
-    <h1>Productos</h1>
-
-    <div id="saludo">Hola, {{user.nombre}} estos son los productos disponibles</div><br>
-
-    {{#if user.rol}}
-    <div>Iniciaste sesion como {{user.rol}}</div>
-
-    <br>
-
-    <button id="logout" onclick="logout()">Cerrar sesion</button>
-    {{else}}
-    <div>Bienvenido,todavia no iniciaste sesion</div> 
-    
-    <br>
-    
-    <button id="logout" onclick="logout()">Iniciar sesion</button>
-    {{/if}}
+    <h1>Lista de productos</h1>
 
     <div>
         {{#each this.products}}
         <div>
             <p>{{this.title}}</p>
-            <p>{{this.description}}</p>
-            <p>{{this.code}}</p>
-            <p>{{this.price}}</p>
-            <p>{{this.stock}}</p>
-            <p>{{this.category}}</p>
-            <p>{{this.thumbnail}}</p>
-            <p>{{this.status}}</p>
-            <p>{{this.id}}</p>
-            <button id={{this.id}}>Agregar al carrito</button>
-            <br><br><br>
+            <br><br>
         </div>
         {{/each}}
 
     </div>
 
 </div>
-
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/products.js"></script>
